# eBPF-Based-Kernel-Event-Tracer

./: .gitignore  app.py  gui.py  pyproject.toml  requirements.txt  run.sh
eBPF Scripts/: Makefile  file_access.c  user_loader.c
ebpf/: Makefile  memory_trace.c  syscall_trace.c
ebpf/old_bpftrace/: file_access.bt  memory_trace.bt  syscall_trace.bt
